<resources>
    <string name="app_name">ConFinder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list">Problems loading Cons List</string>
    <string name="placeholder_url"><![CDATA[https://firebasestorage.googleapis.com/v0/b/comic-shop-finder.appspot.com/o/temp1.png?alt=media&token=323d2764-5606-4ca0-95b9-ad469e115f3e]]></string>

    <string name="times_and_dates_of_convention">Times and Dates of Convention</string>
    <string name="con_name">Con Name</string>
    <string name="con_info">Con Info</string>
    <string name="cam">cam</string>
    <string name="take_photo">Take Photo</string>
    <string name="gal">gal</string>
    <string name="choose_from_your_gallery">Choose from your gallery</string>
    <string name="logo">logo</string>
    <string name="confinder">Confinder</string>
    <string name="icon">icon</string>
    <string name="con_title">Con Title</string>
    <string name="enter_con_title">Enter Con Title</string>
    <string name="venue_name">Venue Name</string>
    <string name="enter_venue_name">Enter Venue Name</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="city">City</string>
    <string name="enter_city">Enter City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="web_address1">Web Address</string>
    <string name="ticket_web_address">Ticket Web Address</string>
    <string name="tickets_address">Tickets Address</string>
    <string name="day_1_time">Day 1 Time</string>
    <string name="day_2_time">Day 2 Time</string>
    <string name="day_3_time">Day 3 Time</string>
    <string name="day_4_time">Day 4 Time</string>
    <string name="submit_con">Submit Con</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="add">add</string>
    <string name="coniv">coniv</string>
    <string name="_109_liked_cons">109 Liked Cons</string>
    <string name="heart">heart</string>
    <string name="favorite">Favorite</string>
    <string name="star">star</string>
    <string name="smile">smile</string>
    <string name="attending">Attending</string>
    <string name="msg">msg</string>
    <string name="comic_con_title">Comic Con Title</string>
    <string name="february_23_24">February 23-24</string>
    <string name="omar_shrine_temple">Omar Shrine Temple</string>
    <string name="address_ph">176 Patriots Point Rd, Pleasant, SC 29464</string>
    <string name="address_2ph">Mt Pleasant, SC 29464</string>
    <string name="tap_for_directions">Tap for Directions</string>
    <string name="dates_and_times">Dates and Times</string>
    <string name="february_23_24_10_6">February 23-24 10-6</string>
    <string name="purchase_tickets_here">Purchase Tickets Here</string>
    <string name="con_reminders">Con Reminders</string>
    <string name="edit">Edit</string>
    <string name="blank" />
    <string name="name">BradPerkins99</string>
    <string name="date1">99/99/18</string>
    <string name="dist">42 Miles</string>
    <string name="launch">launch</string>
    <string name="confinder1">ConFinder</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register_here">Register Here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="ban">banner</string>


    <string-array name="states_array">
        <item>Choose State:</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="hour">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>

    </string-array>


    <string-array name="minute">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>


</resources>
