<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="24dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/launch" />

    <TextView
        android:text="@string/confinder1"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_email_et"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_pass_et"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/login_btn"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/login"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/not_a_member"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/reg_btn"
            android:text="@string/register_here"
            android:textStyle="bold"
            android:textColor="@color/colorHyperlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:id="@+id/forgot_btn"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textColor="@color/colorHyperlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>