<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorList"
    tools:context=".activities.AddConActivity">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_marginTop="72dp"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="Enter Con Information"
                    android:layout_marginBottom="12dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="112dp"
                    android:layout_gravity="center"
                    android:id="@+id/add_con_image_btn"
                    app:srcCompat="@drawable/ic_image_black_48dp"
                    android:contentDescription="@string/gal" />

                <TextView
                    android:text="@string/con_title"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/con_title_et"
                    android:hint="@string/enter_con_title"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/venue_name"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/con_venue_et"
                    android:hint="@string/enter_venue_name"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/address"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/con_address_et"
                    android:hint="@string/enter_address"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:inputType="textPostalAddress"
                    android:imeOptions="actionNext"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/city"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/con_city_et"
                    android:hint="@string/enter_city"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/state"
                    android:id="@+id/state_tv_header"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/states_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_white"
                    android:popupBackground="@color/colorWhite"
                    android:padding="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp" />


                <TextView
                    android:text="@string/zip_code"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/con_zip_et"
                    android:hint="@string/enter_zip_code"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:text="@string/web_address1"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/con_url_et"
                    android:hint="@string/web_address1"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEditText"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/ticket_web_address"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/con_tickets_et"
                    android:hint="@string/tickets_address"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEditText"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/times_and_dates_of_convention"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/con_time1_tv"
                    android:hint="@string/day_1_time"
                    android:textSize="18sp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/con_time2_tv"
                    android:hint="@string/day_2_time"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/con_time3_tv"
                    android:hint="@string/day_3_time"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/con_time4_tv"
                    android:hint="@string/day_4_time"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edittext_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="84dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/submit_con"
                    android:background="@drawable/rounded_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit_con_btn"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>