<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/con_iv"
            android:layout_width="116dp"
            android:layout_height="66dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/temp1"
            android:contentDescription="@string/coniv" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/con_title"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="left"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/date_tv"
                android:textSize="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date1"/>

            <TextView
                android:gravity="right"
                android:layout_gravity="bottom"
                android:id="@+id/distance_tv"
                android:textSize="18dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dist"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>