<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorList"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/prof_name"
        android:layout_marginTop="72dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#9000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="John Doe" />

    <TextView
        android:id="@+id/prof_email"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="johndoe@email.com" />


    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginRight="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/con_reminders" />

        <Switch
            android:id="@+id/notifiy_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>





    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_favorite_red"
            android:contentDescription="@string/heart" />

        <TextView
            android:id="@+id/prof_num_likes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="18sp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            app:srcCompat="@drawable/ic_star_black"
            android:contentDescription="@string/star" />

        <TextView
            android:id="@+id/prof_num_favs"
            android:text="@string/blank"
            android:textSize="18sp"
            android:textColor="@color/colorSecondaryDark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />


    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



    </LinearLayout>

    <TextView
        android:id="@+id/edit_prof_btn"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="bottom"
        android:layout_marginBottom="24dp"
        android:textColor="@color/colorHyperlink"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/edit" />


</LinearLayout>